--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Reto1devto</title>
 </head>
 <body>
-    
+    <div class="content">
+        <aside class="flex-col left">
+            
+        </aside>
+    </div>
 </body>
 </html>
