--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <div class="content">
         <aside class="flex-col left">
-            
+            <div class="callToAction"></div>
+            <nav class="tags"></nav>
         </aside>
     </div>
 </body>
