--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Reto1devto</title>
 </head>
 <body>
-    
+    <header>
+        <nav class= "navbar">
+          <span class="nav-toggle" id="js-navbar-toggle">
+            <i class="fas fa-bars"></i>
+
+    </header>
 </body>
 </html>
