Feat: aside right

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Reto1devto</title>
 </head>
 <body>
-    
+    <div class="content"></div>
+        <main><h1>NO CONTENT</h1></main>
+        <aside class="flex-col right"></aside>
+    </div>
 </body>
 </html>
