--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
         <nav class= "navbar">
           <span class="nav-toggle" id="js-navbar-toggle">
             <i class="fas fa-bars"></i>
+            abrir menu
+            </span>
+            <a href="#" class="logo">logo</a>
+            <ul class="main-nav" id="js-menu">
+                <li>
+                    <a href="#" class="nav-links">Home</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-links">Products</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-links">About Us</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-links">Contact Us</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-links">Blog</a>
+                </li>
+        
+            </ul>
+        </nav>
 
     </header>
 </body>
