--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <nav class="tags"></nav>
         </aside>    
         <main><h1>NO CONTENT</h1></main>
+        <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--l-iAIbQx--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/n72u7msdmflruzlsh3jc.png">
         <aside class="flex-col right"></aside>
     </div>
 </body>
