Feat: flex-col.right terminado

--- a/index.html
+++ b/index.html
@@ -40,8 +40,82 @@
             <div class="callToAction"></div>
             <nav class="tags"></nav>
         </aside>    
-        <main><h1>NO CONTENT</h1></main>
-        <aside class="flex-col right"></aside>
+        <main></main>
+        <aside class="flex-col right">
+           <section class="bloque-enlaces">
+            <ul>
+                <li>
+                    <a href="" class="renglon">
+                    <div>
+                        <h3>#discuss</h3>                        
+                    </div>
+                    </a>
+                </li>
+            </ul>
+
+            <ul>
+                <li>
+                    <a href="" class="renglon">
+                    <div>
+                        <h5>Meme Monday</h5>
+                        <h6>41 comments</h6>
+                    </div>
+                    </a>
+                </li>
+            </ul>
+
+            <ul>
+                <li>
+                    <a href="" class="renglon">
+                    <div>
+                        <h5>What repos would you recommend to new
+                            contributors for Hacktoberfest?
+                        </h5>
+                        <h6>3 comments</h6>
+                    </div>
+                    </a>
+                </li>
+            </ul>
+
+            <ul>
+                <li>
+                    <a href="" class="renglon">
+                    <div>
+                        <h5>React sees a dip in downloads on npm.
+                            What´s going on?
+                        </h5>
+                        <h6>17 comments</h6>
+                    </div>
+                    </a>
+                </li>
+            </ul>
+
+            <ul>
+                <li>
+                    <a href="" class="renglon">
+                    <div>
+                        <h5>Open Source ABCs:
+                             Repository</h5>
+                        <h6>2 comments</h6>
+                    </div>
+                    </a>
+                </li>
+            </ul>
+
+            <ul>
+                <li>
+                    <a href="" class="renglon">
+                    <div>
+                        <h5>Do Tech Generalists Outshine
+                            Specialists?
+                        </h5>
+                        <h6>3 comments</h6>
+                    </div>
+                    </a>
+                </li>
+            </ul>
+           </section>
+        </aside>
     </div>
 </body>
 </html>
