Integración de página

--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
             <div class="callToAction"></div>
             <nav class="tags"></nav>
         </aside>    
-        <main></main>
+        <main>
+            <img class="img" src="https://res.cloudinary.com/practicaldev/image/fetch/s--l-iAIbQx--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/n72u7msdmflruzlsh3jc.png">
+            <h1>React sees a dip in downloads on npm 📉. What's going on?</h1>
+                <div class="links">
+                    <a href="#" class="aqua"><span>#</span>discuss</a>
+                    <a href="#" class="purple"><span>#</span>webdev</a>
+                    <a href="#" class="yellow"><span>#</span>javascript</a>
+                    <a href="#" class="black"><span>#</span>react</a>
+                </div>
+            </main>
         <aside class="flex-col right">
            <section class="bloque-enlaces">
             <ul>
@@ -116,17 +125,6 @@
             </ul>
            </section>
         </aside>
-        <main><h1>NO CONTENTt</h1>
-        <img class="img" src="https://res.cloudinary.com/practicaldev/image/fetch/s--l-iAIbQx--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/n72u7msdmflruzlsh3jc.png">
-        <h1>React sees a dip in downloads on npm 📉. What's going on?</h1>
-            <div class="links">
-                <a href="#" class="aqua"><span>#</span>discuss</a>
-                <a href="#" class="purple"><span>#</span>webdev</a>
-                <a href="#" class="yellow"><span>#</span>javascript</a>
-                <a href="#" class="black"><span>#</span>react</a>
-            </div>
-        </main>
-        <aside class="flex-col right"></aside>
     </div>
 </body>
 </html>
