--- a/index.html
+++ b/index.html
@@ -52,5 +52,13 @@
         </main>
         <aside class="flex-col right"></aside>
     </div>
+    <div>
+        <img alt="The DEV Team logo" src="https://res.cloudinary.com/practicaldev/image/fetch/s--I3c1eMp2--/c_fill,f_auto,fl_progressive,h_90,q_auto,w_90/https://dev-to-uploads.s3.amazonaws.com/uploads/organization/profile_image/1/61bcafb9-7b6c-4904-aedd-87c02d644fc8.jpg" class="crayons-logo__image" loading="lazy">
+    </div>
+    <div>
+        <button id="story-author-preview-trigger-1606551" aria-controls="story-author-preview-content-1606551" class="profile-preview-card__trigger fs-s p-1 -ml-1 -my-2 crayons-btn crayons-btn--ghost" aria-label="dev.to staff profile details" aria-expanded="true" aria-haspopup="true" data-initialized="true">
+            dev.to staff
+          </button>
+    </div>
 </body>
 </html>
