--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="content">
         <aside class="flex-col left">
             <div class="callToAction">
-                <h2 class="aside1">
+                <h2 class="h2-text">
                     DEV Community is a community of 1,146,577 amazing developers
                 </h2>
                 <p class="aside2">
