--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
+    <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
     <title>Reto1devto</title>
 </head>
 <body>
@@ -92,6 +93,7 @@
                     <div>
                         <h5>React sees a dip in downloads on npm.
                             What´s going on?
+                            <i class="em em-chart_with_downwards_trend" aria-role="presentation" aria-label="CHART WITH DOWNWARDS TREND"></i>
                         </h5>
                         <h6>17 comments</h6>
                     </div>
