--- a/index.html
+++ b/index.html
@@ -42,14 +42,54 @@
                 <h2 class="h2-text">
                     DEV Community is a community of 1,146,577 amazing developers
                 </h2>
-                <p class="aside2">
+                <p class="parrafo-text">
                     We're a place where coders share, stay up-to-date and grow their careers.
                 </p>
-                <div class="caja2">
-                    <a class="create href="#">Create account</a>
+                <div>
+                    <a class="enlace1" href="#">Create account</a>
+                    <a class="enlace2" href="#">Log in</a>
                 </div>
             </div>
-            <nav class="tags"></nav>
+            <nav class="tags">
+                <ul>
+                    <li>
+                        <a class="sidebar-nav" href="#">Home</a>
+                    </li>
+                    <li>
+                        <a class="sidebar-nav" href="#">Reading List</a>
+                    </li>
+                    <li>
+                        <a class="sidebar-nav" href="#">Podcast</a>
+                    </li>
+                    <li>
+                        <a class="sidebar-nav" href="#">Videos</a>
+                    </li>
+                    <li>
+                        <a class="sidebar-nav" href="#">Tags</a>
+                    </li>
+                    <li>
+                        <a class="sidebar-nav" href="#">FAQ</a>
+                    </li>
+                    <li>
+                        <a class="sidebar-nav" href="#">Forem Shop</a>
+                    </li>
+                    <li>
+                        <a class="sidebar-nav" href="#">Advertise on DEV</a>
+                    </li>
+                    <li>
+                        <a class="sidebar-nav" href="#">About</a>
+                    </li>
+                    <li>
+                        <a class="sidebar-nav" href="#">Contact</a>
+                    </li>
+                    <li>
+                        <a class="sidebar-nav" href="#">Guides</a>
+                    </li>
+                    <li>
+                        <a class="sidebar-nav" href="#">Software comparisons</a>
+                    </li>
+                </ul>
+            </nav>
         </aside>    
         <main>
            <!--<h1>NO CONTENT</h1>--> 
