--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
             <nav class="tags">
                 <ul>
                     <li>
-                        <a class="sidebar-nav" href="#">Home</a>
+                        <a class="sidebar-nav" href="#">
+                            <span class="icon">
+                                <svg mxlns="https://cdn-icons-png.flaticon.com/128/609/609803.png" viewBox="0 0 44 44" width="24" height="24">
+                                    <g></g>
+                                </svg>
+                            </span>
+                            Home
+                        </a>
                     </li>
                     <li>
                         <a class="sidebar-nav" href="#">Reading List</a>
