--- a/index.html
+++ b/index.html
@@ -51,16 +51,19 @@
                 <ul>
                     <li>
                         <a class="sidebar-nav" href="#">
-                            <span class="icon">
-                                <svg mxlns="https://cdn-icons-png.flaticon.com/128/609/609803.png" viewBox="0 0 44 44" width="24" height="24">
-                                    <g></g>
-                                </svg>
+                            <span class="icon"
+                                style='font-size:25px;'>&#127969; 
                             </span>
                             Home
                         </a>
                     </li>
                     <li>
-                        <a class="sidebar-nav" href="#">Reading List</a>
+                        <a class="sidebar-nav" href="#">                            
+                            <span class="icon"
+                                style='font-size:25px;'>&#127908;
+                            </span>
+                        Reading List
+                        </a>
                     </li>
                     <li>
                         <a class="sidebar-nav" href="#">Podcast</a>
