feat: updating aside estructure html

--- a/index.html
+++ b/index.html
@@ -43,57 +43,105 @@
                     We're a place where coders share, stay up-to-date and grow their careers.
                 </p>
                 <div>
-                    <a class="enlace1" href="#">Create account</a>
-                    <a class="enlace2" href="#">Log in</a>
+                    <button class="enlace1"><a href="#">Create account</a></button>
+                    <button class="enlace2"><a href="#">Log in</a></button>
                 </div>
             </div>
             <nav class="tags">
                 <ul>
-                    <li>
+                    <li style="list-style-type: none;">
                         <a class="sidebar-nav" href="#">
                             <span class="icon"
-                                style='font-size:25px;'>&#127969; 
+                                style='font-size:15px;'>&#127969; 
                             </span>
                             Home
                         </a>
                     </li>
-                    <li>
+                    <li style="list-style-type: none;">
                         <a class="sidebar-nav" href="#">                            
                             <span class="icon"
-                                style='font-size:25px;'>&#127908;
+                                style='font-size:15px;'>&#128203;
                             </span>
-                        Reading List
+                            Reading List
                         </a>
                     </li>
-                    <li>
-                        <a class="sidebar-nav" href="#">Podcast</a>
+                    <li style="list-style-type: none;">
+                        <a class="sidebar-nav" href="#">
+                            <span
+                                style='font-size:15px;'>&#127897;
+                            </span>
+                            Podcast
+                        </a>
                     </li>
-                    <li>
-                        <a class="sidebar-nav" href="#">Videos</a>
+                    <li style="list-style-type: none;">
+                        <a class="sidebar-nav" href="#">
+                            <span
+                                style='font-size:15px;'>&#128249;
+                            </span>
+                            Videos
+                        </a>
                     </li>
-                    <li>
-                        <a class="sidebar-nav" href="#">Tags</a>
+                    <li style="list-style-type: none;">
+                        <a class="sidebar-nav" href="#">
+                            <span
+                                style='font-size:15px;'>&#128220;
+                            </span>
+                            Tags
+                        </a>
                     </li>
-                    <li>
-                        <a class="sidebar-nav" href="#">FAQ</a>
+                    <li style="list-style-type: none;">
+                        <a class="sidebar-nav" href="#">
+                            <span
+                                style='font-size:15px;'>&#128161;
+                            </span>
+                            FAQ
+                        </a>
                     </li>
-                    <li>
-                        <a class="sidebar-nav" href="#">Forem Shop</a>
+                    <li style="list-style-type: none;">
+                        <a class="sidebar-nav" href="#">
+                            <span
+                                style='font-size:15px;'>&#128717;
+                            </span>
+                            Forem Shop
+                        </a>
                     </li>
-                    <li>
-                        <a class="sidebar-nav" href="#">Advertise on DEV</a>
+                    <li style="list-style-type: none;">
+                        <a class="sidebar-nav" href="#">
+                            <span
+                                style='font-size:15px;'>&#128147;
+                            </span>
+                            Advertise on DEV
+                        </a>
                     </li>
-                    <li>
-                        <a class="sidebar-nav" href="#">About</a>
+                    <li style="list-style-type: none;">
+                        <a class="sidebar-nav" href="#">
+                            <img class="logo" src="https://dev-to-uploads.s3.amazonaws.com/uploads/logos/resized_logo_UQww2soKuUsjaOGNB38o.png" alt="">
+                        About
+                        </a>
                     </li>
-                    <li>
-                        <a class="sidebar-nav" href="#">Contact</a>
+                    <li style="list-style-type: none;">
+                        <a class="sidebar-nav" href="#">
+                            <span
+                                style='font-size:15px;'>&#127897;
+                            </span>
+                            Contact
+                        </a>
                     </li>
-                    <li>
-                        <a class="sidebar-nav" href="#">Guides</a>
+                    <li style="list-style-type: none;">
+                        <a class="sidebar-nav" href="#">
+                            <span
+                                style='font-size:15px;'>&#128239;
+                            </span>
+                            Guides
+                        </a>
                     </li>
-                    <li>
-                        <a class="sidebar-nav" href="#">Software comparisons</a>
+                    <li style="list-style-type: none;">
+                        <a class="sidebar-nav" href="#">
+                            <span
+                                style='font-size:15px;'>&#129300;
+                            </span>
+                            Software comparisons
+                        </a>
                     </li>
                 </ul>
             </nav>
