--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
             <ul class="main-nav" id="js-menu">           
                               
                 <div class="nav-toggle">DEV</div> 
-                <input class="buttom1" type="text"> 
-                
+                    <input class="buttom1" type="text" placeholder="Search..."> 
+                    <button class="btn">
+                        <span
+                            style='font-size:15px;'>&#127969;
+                        </span>
+                    </button>
+                </div>
                 <li>
                     <a href="#" class="buttom2">Log in</a>
                 </li>
