--- a/index.html
+++ b/index.html
@@ -187,10 +187,35 @@
                 </a>
 
                 <a href="" class="comments"><i class="em em-speech_balloon" aria-role="presentation" aria-label="SPEECH BALLOON"></i> add comments</a>  
-                <p class="time">6 min read</p>
-
+                <p class="time">6 min read</p>  
             </div>
-           
+
+            <div class="graybox">
+                <h1>Now Awarding Badges to Elevate Top Discussions 💬💥</h1>
+
+                <div class="links">
+                    <a href="#" class="aqua"><span>#</span>discuss</a>
+                    <a href="#" class="purple"><span>#</span>meta</a>
+                    <a href="#" class="yellow"><span>#</span>design</a>
+                    <a href="#" class="black"><span>#</span>badges</a>
+                </div>
+                <div class="icons" >
+                    <a href="#">
+                    <i class="em em-athletic_shoe one" aria-role="presentation" aria-label="ATHLETIC SHOE" ></i>
+                    <i class="em em-balloon" aria-role="presentation" aria-label="BALLOON"></i>
+                    <i class="em em-cupid" aria-role="presentation" aria-label="HEART WITH ARROW"></i>
+                    <i class="em em-avocado" aria-role="presentation" aria-label="AVOCADO"></i>
+                    <p>18 reactions</p>
+
+
+                    </a>
+
+                    <a href="" class="comments"><i class="em em-speech_balloon" aria-role="presentation" aria-label="SPEECH BALLOON"></i> add comments</a>  
+                    <p class="time">2 min read</p>  
+                </div>
+            </div>
+
+
         </main>
         <!-- <aside class="flex-col right"></aside> -->
             <!-- <img class="img" src="https://res.cloudinary.com/practicaldev/image/fetch/s--l-iAIbQx--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/n72u7msdmflruzlsh3jc.png">
