--- a/index.html
+++ b/index.html
@@ -144,31 +144,31 @@
             </nav>
         </aside>    
         <main>
-           <!--<h1>NO CONTENT</h1>
-        https://res.cloudinary.com/practicaldev/image/fetch/s--l-iAIbQx--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/n72u7msdmflruzlsh3jc.png
-        --> 
-        <img class="img" src="https://res.cloudinary.com/practicaldev/image/fetch/s---UXjdvws--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_775/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/wixrm7ejmrua4su7agha.jpg">
-        <h1>React sees a dip in downloads on npm 📉. What's going on?</h1>
-            <div class="links">
-                <a href="#" class="aqua"><span>#</span>discuss</a>
-                <a href="#" class="purple"><span>#</span>webdev</a>
-                <a href="#" class="yellow"><span>#</span>javascript</a>
-                <a href="#" class="black"><span>#</span>react</a>
-            </div>
-            <div class="icons" >
-                <a href="#">
-                <i class="em em-athletic_shoe one" aria-role="presentation" aria-label="ATHLETIC SHOE" ></i>
-                <i class="em em-balloon" aria-role="presentation" aria-label="BALLOON"></i>
-                <i class="em em-cupid" aria-role="presentation" aria-label="HEART WITH ARROW"></i>
-                <i class="em em-avocado" aria-role="presentation" aria-label="AVOCADO"></i>
-                <p>143 reactions</p>
+            <div>
+                
+                <img class="img" src="https://res.cloudinary.com/practicaldev/image/fetch/s---UXjdvws--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_775/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/wixrm7ejmrua4su7agha.jpg">
+                <h2>React sees a dip in downloads on npm 📉. What's going on?</h2>
+                    <div class="links">
+                        <a href="#" class="aqua"><span>#</span>discuss</a>
+                        <a href="#" class="purple"><span>#</span>webdev</a>
+                        <a href="#" class="yellow"><span>#</span>javascript</a>
+                        <a href="#" class="black"><span>#</span>react</a>
+                    </div>
+                    <div class="icons" >
+                        <a href="#">
+                        <i class="em em-athletic_shoe one" aria-role="presentation" aria-label="ATHLETIC SHOE" ></i>
+                        <i class="em em-balloon" aria-role="presentation" aria-label="BALLOON"></i>
+                        <i class="em em-cupid" aria-role="presentation" aria-label="HEART WITH ARROW"></i>
+                        <i class="em em-avocado" aria-role="presentation" aria-label="AVOCADO"></i>
+                        <p>143 reactions</p>
 
 
-                </a>
+                        </a>
 
-                <a href="" class="comments"><i class="em em-speech_balloon" aria-role="presentation" aria-label="SPEECH BALLOON"></i> add comments</a>  
-                <p class="time">6 min read</p>
+                        <a href="" class="comments"><i class="em em-speech_balloon" aria-role="presentation" aria-label="SPEECH BALLOON"></i> add comments</a>  
+                        <p class="time">6 min read</p>
 
+                    </div>
             </div>
            
         </main>
